# mini-share

./: CMakeLists.txt  Main.qml  main.cpp
src/: networkhandler.cpp  networkhandler.h  receiverhandler.cpp  receiverhandler.h  sendhandler.cpp  sendhandler.h
src/gui/: mainwindow.cpp  mainwindow.h
ui/: main.qml
ui/common/: CxAboutNetwork.qml  CxButton.qml  CxHamburger.qml
